# UncertainSCI

./: .gitignore  .readthedocs.yaml  CITATION.cff  C_eval.py  LICENSE  README.md  TODO.md  debug.py  discrete_sampling.py  distributions.py  eval_F_jacobi.py  families.py  idist_jacobi.py  idist_mixture_sampling.py  idistinv.py  idistinv_jacobi.py  indexing.py  lin_mod.py  markov_stiltjies.py  medapprox_jacobi.py  model_examples.py  opoly1d.py  opolynd.py  pce.py  quad_mod.py  ratio_eval.py  requirements.txt  sampling_total_degree_indices.py  setup.cfg  setup.py  transformations.py
UncertainSCI/: __init__.py  aPC.py  ab_exact_6.mat  composite.py  compute_ttr.py  dPI_vs_Conjecture.py  debug.py  discrete_convol.py  distributions.py  ex_capstone.py  ex_discrete_cheb.py  ex_discrete_convolution.py  ex_freud_4.py  ex_freud_6.py  ex_multi_component.py  ex_pws.py  families.py  indexing.py  model_examples.py  mthd_aPC.py  mthd_dPI.py  mthd_hankel_det.py  mthd_lanczos_stable.py  mthd_mod_cheb.py  mthd_mod_correct.py  mthd_stieltjes.py  nocomposite.py  opoly1d.py  opolynd.py  pce.py  sampling.py  setup.py  stieltjes.py  transformations.py  ttr.py  vis.py
cpptests/: CMakeLists.txt  README.md  graphCppOutput.srn5  travis.yml
cpptests/src/: CMakeLists.txt  main.cpp  main.h
cpptests/src/Math/: CMakeLists.txt  families.cpp  families.h  opoly1d.cpp  opoly1d.h  types.cpp  types.h
demos/: adapt_pce.py  anisotropic_distribution.py  basic_uq_example.py  build_pce.py  build_pce_exp.py  build_pce_normal.py  discrete_uniform.py  quantiles.py  sensitivity_measures.py  simple_boxplots.py  simple_discrete_uniform_distribution.py  simple_distribution.py  simple_exponential_distribution.py  simple_normal_distribution.py
docs/: .readthedocs.yaml  Gemfile  UncertainSCI.bib  _config.yml  about.md  conf.py  demos.rst  dev.md  distributions.rst  index.md  index.rst  install.rst  other.md  pce.rst  polynomials.rst  references.bib  requirements.txt  spaces.rst  start.md  support.rst  user.md
notebooks/: build_pce.ipynb
paper/: paper.bib  paper.md
tests/: distribution_test.py  fjacobiinv_test.py  hermite_inv.py  jacobipolys.py  laguerre.py  laguerre_inv.py  linalg.py  test_aPC.py  test_ab_freud.py  test_ab_jacobi.py  test_ab_pws.py  test_discrete_cheb.py  test_discrete_convol.py  test_fjacobi_inv.py  test_hermite_inv.py  test_indexing.py  test_jacobipolys.py  test_laguerre.py  test_laguerre_inv.py  test_linalg.py  test_models.py  test_normalexp_dist.py  test_pce.py  test_polys.py  (+5 more)
(+67 files in other folders)
